k8s/serviceproduct.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-product
spec:
  selector:
    app: backend-product
  ports:
    - port: 8002
      targetPort: 8002
  type: ClusterIP
